# os

./: .gitignore  CMakeLists.txt  README.md  disk.sh  fdisk.args  kallsyms.c
kernel/: CMakeLists.txt  kernel.lds
kernel/boot/: head.S
kernel/include/: linkage.h
test/: a.out
user/: CMakeLists.txt  user.lds
